--- a/my-app2/src/app/componets/hero/hero.component.html
+++ b/my-app2/src/app/componets/hero/hero.component.html
@@ -11,14 +11,20 @@
 
     <li *ngFor="let v of vetor"> {{ v }}</li>
 </ul>
-
+<div class="heroes">
 <ul>
     <li *ngFor="hero of heroes">{{hero}}</li> 
-
 </ul>   
-
-<h2><{{ hero.nome}}</h2>
 </div>
+
+<div class="card-hero"></div>
+<div class="titulo">
+    <img src="" alt="" class="photo" />
+<h2>{{ hero.nome}}</h2>
+</div>
+<div class="content">Lorem ipsum dol.</div>
+    </div>
+        </div>
 
 
 
