--- a/my-app2/src/app/components/login/login.component.css
+++ b/my-app2/src/app/components/login/login.component.css
@@ -1,5 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+h2 {
+margin:20px;
+}
+
+.error{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+background: tomato;
+width: 250px;
+padding: 5px;
+border-radius: 8px;
+box-shadow: 2px 2px 5px #383838;
+margin-bottom: 5px;
+height: 38px;
+
+}
+
 .container {
-    background: #454D6B;
+    background: #9733FF;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -7,37 +30,78 @@
 }
 
 .login {
-    width: 400px;
-    height: 500px;
+    width: 450px;
+    height: 450px;
     background: #fff;
     border-radius: 15px;
-    box-shadow: rgba(240, 46, 170, 0.4) 0px 5px, rgba(240, 46, 170, 0.3) 0px 10px, rgba(240, 46, 170, 0.2) 0px 15px, rgba(240, 46, 170, 0.1) 0px 20px, rgba(240, 46, 170, 0.05) 0px 25px;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-
 .input {
 width: 300px;
-box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
-margin: 10px;
-padding: 30px;
-height: 50px;
-padding-left: 20px;
+box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;;
+margin: 10px; 
+padding-left: 30px;
+height: 45px;
 border-radius: 60px;
 display: flex;
 align-items: center;
 }
 
 .input input {
-border: none;
-width: 200px;
-color: #999;
+    border: none;
+    width: 210px;
+    color: #999;
+    height: 30px;
+    margin-left: 5px;
+    outline: none;
+    font-size: 18px;
 }
+
 i {
-    font-size: 30px;
-    color: linear-gradient(#4201F1, #892AE8);
-    font-size: #58159a;
+font-size: 25px;
+color: linear gradient( #4201F1, #892AE8);
+color: #581558
+}
+
+.remember {
+    display: flex;
+    justify-content: space-between;
+    width: 330px;
+    margin:20px;
+}
+
+.remember div {
+display: flex;
+gap: 10px;
+}
+
+.remember a {
+    text-decoration: none;
+    color: #383838;
+}
+
+.button {
+width: 180px;
+height: 40px;
+margin-bottom: 20px;
+border-radius: 40px;
+border: none;
+box-shadow: 2px 2px 10px #383838;
+background: linear-gradient(rgb(121, 15, 178), rgb(186, 110, 226));
+cursor: pointer;
+
+
+}
+
+.button:hover{
+    filter: brightness(140%);
+}
+
+h3 {
+    font-weight: 400px;
 }
